package datatypes;

option java_package = "com.invap.mulitas.serialization.impl.protobuf";

message Boolean
{
	optional bool value = 1;
}


message FixedPoint
{
	enum Sign
	{
		Sign_POSITIVE = 0;
		Sign_NEGATIVE = 1;
	}
	optional Sign sign = 1;
	optional uint32 scaleFactor = 2;
	optional uint64 value = 3;
}

message FloatingPoint
{
	optional double value = 1;
}

message Integer
{
	optional int64 value = 1;
}

message LongInteger
{
	optional Integer lowPart = 1;
	optional Integer highPart = 2;
}


message TimeStamp
{
	optional int64 seconds = 1;
	optional int64 nanoseconds = 2;
}


message Literal
{
	optional string value = 1;
}

message ByteStream
{
	optional bytes value = 1;
}

enum NumberType
{
	FLOAT_POINT = 0;
	FIXED_POINT = 1;
	INTEGER = 2;
	LONG_INTEGER = 3;
}

message Number
{
	optional NumberType type = 1;
	optional FloatingPoint floatinPointValue = 2;
	optional FixedPoint fixedPointValue = 3;
	optional Integer integerValue = 4;
	optional LongInteger longInteger = 5;
}

enum AnyTypeType
{
	NUMBER = 0;
	STRING = 1;
	BYTES = 2;
	BOOLEAN = 3;
}

message AnyType
{
	optional AnyTypeType type = 1;
	optional Number numberValue = 2;
	optional string stringValue = 3;
	optional bool booleanValue = 4;
	optional bytes byteValue = 5;

}


